--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -1,8 +1,7 @@
 {
-  "extensionName": { "message": "FoxyProxy 标准版" },
+  "extensionName": { "message": "FoxyProxy" },
+  "extensionNameBasic": { "message": "FoxyProxy Basic" },
   "extensionDescription": { "message": "易于使用，适用于任何人的高级代理管理工具" },
-
-  "extensionNameBasic": { "message": "FoxyProxy 基础版" },
 
 
   "error": { "message": "错误" },
