--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionName": { "message": "FoxyProxy" },
-  "extensionNameBasic": { "message": "FoxyProxy Basic" },
+  "extensionNameBasic": { "message": "FoxyProxy Basique" },
   "extensionDescription": { "message": "Gestionnaire de proxy avancé facile d'utilisation" },
 
 
