--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionName": { "message": "FoxyProxy" },
-  "extensionNameBasic": { "message": "FoxyProxy Basic" },
+  "extensionNameBasic": { "message": "FoxyProxy 基础版" },
   "extensionDescription": { "message": "易于使用，适用于任何人的高级代理管理工具" },
 
 
