--- a/src/_locales/pt_BR/messages.json
+++ b/src/_locales/pt_BR/messages.json
@@ -5,22 +5,22 @@
   "extensionNameBasic": { "message": "FoxyProxy Básico" },
 
 
-  "error": { "message": "Ocorreu uma falha!" },
+  "error": { "message": "Falha" },
   "erroNoSettings": { "message": "Nenhuma configuração foi encontrada. Reinstale o FoxyProxy." },
 
   "deleteAll": { "message": "Excluir tudo" },
   "export": { "message": "Exportar configurações" },
   "import": { "message": "Configurações de Importação" },
   "importProxyList": { "message": "Importar lista de proxy" },
-  "log": { "message": "Registro de Alterações" },
+  "log": { "message": "Registro" },
   "myIP": { "message": "Qual é o meu IP?" },
-  "deleteAllmessage": { "message": "Todos os dados foram excluídos." },
+  "deleteAllmessage": { "message": "Todos os dados excluídos" },
 
   "authError": { "message": "$1 está recusando conexões\nVerifique o nome de usuário/senha do proxy" },
 
 
   "delete": { "message": "Excluir" },
-  "deleteNot": { "message": "Não delete!" },
+  "deleteNot": { "message": "Não apague" },
   "deleteBrowserData": { "message": "Excluir dados do navegador" },
   "deleteBrowserDataDescription": { "message": "Cache, cookies, armazenamento indexedDB, armazenamento local DOM, dados de plug-in, dados de service worker." },
   "deleteBrowserDataNotDescription": { "message": "Senhas armazenadas, histórico de navegação e formulário, histórico de download, webSQL e certificados vinculados ao servidor." },
@@ -29,8 +29,8 @@
   "about": { "message": "Sobre" },
   "syncSettings": { "message": "Sincronizar configurações" },
   "syncSettingsHelp": { "message": "Ative para usar o Firefox Sync (as configurações são sincronizadas em todos os seus navegadores Firefox). Desligue para armazenar as configurações localmente. Observe que você pode ter duas instâncias diferentes de configurações, uma de sincronização e uma local." },
-  "on": { "message": "Habilitar" },
-  "off": { "message": "Desabilitar" },
+  "on": { "message": "Ligar" },
+  "off": { "message": "Desligar" },
   "confirmTransferToLocal": { "message": "Deseja transferir as configurações sincronizadas para seu perfil local?\nOs dados existentes serão mesclados." },
   "confirmTransferToSync": { "message": "Deseja transferir as configurações locais para seu perfil sincronizado?\nOs dados existentes serão mesclados." },
 
@@ -61,7 +61,7 @@
   "importEnd": { "message": "As configurações foram importadas com sucesso" },
   "patternsChanged": { "message": "Alguns padrões foram alterados porque continham barras. Barras em padrões não são mais suportadas." },
   "importEndSlash": { "message": "Importação concluída. Barras em padrões não são suportadas devido a um bug do Firefox. Revise seus padrões e remova as barras, se houver." },
-  "errorUserPass": { "message": "Por favor, digite o nome de usuário e a senha." },
+  "userPassError": { "message": "Por favor, digite o nome de usuário e a senha." },
   "errorFetch": { "message": "Ocorreu um erro com a operação" },
 
 
@@ -173,5 +173,7 @@
   "overwritProxiesHelp2": { "message": "Desmarque para anexar proxies nesta lista a proxies existentes." },
   "confirmOverwrite": { "message": "Tem certeza de que deseja substituir os proxies existentes?" },
   "importsSkipped": { "message": "$1 linhas ignoradas porque não puderam ser analisadas:\n\n$2" },
-  "importSucceeded": { "message": "Ler e armazenar proxies de $1." }
+  "importSucceeded": {
+    "message": "Ler e armazenar proxies de $1."
+  }
 }
