--- a/src/_locales/ja_JP/messages.json
+++ b/src/_locales/ja_JP/messages.json
@@ -13,7 +13,7 @@
   "unsetTabProxy": { "message": "タブプロキシーを解除" },
 
   "incognitoAccessError": { "message": "Firefox でプロキシーを設定するためにはプライベートブラウジングでの許可設定が必要です" },
-  "controlledByOtherExtensions": { "message": "他の機能拡張によって設定が制御されています" },
+  "controlledByOtherExtensions": { "message": "他の拡張機能によって設定が制御されています" },
 
   "enableSync": { "message": "同期を有効化" },
   "enableSyncDescription": { "message": "グローバル除外、プロキシー、パターンを同期する" },
