--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -8,13 +8,14 @@
   "ip": { "message": "IP" },
   "location": { "message": "Location" },
   "quickAdd": { "message": "Quick Add" },
+  "includeHost": { "message": "Include Host" },
   "excludeHost": { "message": "Exclude Host" },
   "tabProxy": { "message": "Tab Proxy" },
   "more": { "message": "More" },
-  "server": { "message": "Server" },
 
   "setTabProxy": { "message": "Set Tab Proxy" },
   "unsetTabProxy": { "message": "Unset Tab Proxy" },
+  "openLinkTabProxy": { "message": "Open Link in New Tab Proxy" },
 
   "incognitoAccessError": { "message": "Firefox requires private browsing permission for proxy settings." },
   "controlledByOtherExtensions": { "message": "Settings are controlled by other extensions." },
@@ -44,25 +45,38 @@
   "deleteBrowsingDataConfirm": { "message": "Are you sure you want to delete cookies, indexedDB storage, DOM local storage?" },
   "restoreDefaults": { "message": "Restore Defaults" },
   "restoreDefaultsConfirm": { "message": "Are you sure you want to restore all settings to Defaults?" },
+
   "limitWebRTC": { "message": "Limit WebRTC" },
-  "limitWebRTCDescription": { "message": "Toggle WebRTC browser settings" },
+  "limitWebRTCDescription": { "message": "Change WebRTC browser settings" },
+  "publicInterfaceOnly": { "message": "Public Interface Only" },
+  "publicPrivateInterfaces": { "message": "Public and Private Interfaces" },
+  "disableNonProxied": { "message": "Disable Non-Proxied" },
+  "proxyOnly": { "message": "Proxy Only" },
 
   "proxies": { "message": "Proxies" },
   "add": { "message": "Add" },
   "getLocation": { "message": "Get Location" },
+  "ping": { "message": "Ping" },
 
   "duplicate": { "message": "Duplicate" },
 
   "title": { "message": "Title" },
   "type": { "message": "Type" },
+  "server": { "message": "Server" },
+  "username": { "message": "Username" },
+  "password": { "message": "Password" },
+  "togglePassword": { "message": "Toggle Password" },
+  "userPassError": { "message": "Missing Username or Password" },
+  "view": { "message": "View" },
   "color": { "message": "Color" },
   "random": { "message": "Random" },
   "hostname": { "message": "Hostname" },
   "port": { "message": "Port" },
+  "hostnamePortError": { "message": "Missing Hostname - Port" },
   "city": { "message": "City" },
   "country": { "message": "Country" },
   "proxyDNS": { "message": "Proxy DNS" },
-  "hostnamePortError": { "message": "Missing Hostname - Port" },
+  "storeLocally": { "message": "Store Locally" },
 
   "pattern": { "message": "Pattern" },
   "patterns": { "message": "Patterns" },
@@ -76,22 +90,40 @@
   "delete": { "message": "Delete" },
   "deleteConfirm": { "message": "Are you sure you want to delete?" },
 
+  "bulkEdit": { "message": "Bulk Edit" },
+  "openAll": { "message": "Open All" },
+  "closeAll": { "message": "Close All" },
+  "setType": { "message": "Set Type" },
+  "setPort": { "message": "Set Port" },
+  "setTitle": { "message": "Set Title" },
+  "setUsername": { "message": "Set Username" },
+  "setPassword": { "message": "Set Password" },
+  "moveProxy": { "message": "Move Proxy" },
+  "movePattern": { "message": "Move Pattern" },
+  "deleteProxy": { "message": "Delete Proxy" },
+
+
   "importFoxyProxyAccount": { "message": "Import FoxyProxy Account" },
-  "username": { "message": "Username" },
-  "password": { "message": "Password" },
-  "togglePassword": { "message": "Toggle Password" },
-  "userPassError": { "message": "Missing Username or Password" },
-  "storeLocally": { "message": "Store Locally" },
-  "view": { "message": "View" },
+  "mainServer": { "message": "Main Server" },
+  "altServer": { "message": "Alt Server" },
+
 
   "importProxyList": { "message": "Import Proxy List" },
   "importFromURL": { "message": "Import from URL" },
   "importFromOlderVersions": { "message": "Import from older versions" },
 
   "tester": { "message": "Pattern Tester" },
+  "testerDescription": { "message": "Test a pattern against URLs" },
   "test": { "message": "Test" },
   "result": { "message": "Result" },
   "back": { "message": "Back" },
+  "invalidPatternError": { "message": "Invalid Pattern" },
+  "schemeError": { "message": "'*' in scheme must be the only character" },
+  "unsupportedSchemeError": { "message": "Unsupported scheme" },
+  "hostError": { "message": "'*' in host must be at the start" },
+  "hostDotError": { "message": "'*' in host must be the only character or be followed by '.'" },
+  "portError": { "message": "Host must not include a port number" },
+  "proxyByPatternsDescription": { "message": "Test a URL against active proxy patterns" },
 
   "log": { "message": "Log" },
   "documentUrl": { "message": "Document URL" },
@@ -100,6 +132,7 @@
   "proxy": { "message": "Proxy" },
   "time": { "message": "Time" },
   "notAvailable": { "message": "Proxy data is not available on Chrome (Firefox Only)" },
+  "getAssociatedDomains": { "message": "Get Associated Domains" },
 
   "about": { "message": "About" },
   "error": { "message": "There was an error with the operation" },
